# cmulab_diarization

./: README.md  requirements.txt  setup.cfg
cmulab_diarization/: __init__.py  __main__.py  run_diarization.py
cmulab_diarization/resemblyzer/: audio.py  voice_encoder.py
