[metadata]
name = cmulab_diarization
version = 0.0.1
description = CMULAB plugin for Speaker Diarization
author = Zaid Sheikh
url = https://github.com/zaidsheikh/cmulab_diarization
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    librosa>=0.6.1
    numpy>=1.10.1
    scipy>=1.2.1
    torch>=1.0.1
    typing
    webrtcvad>=2.0.10

[options.entry_points]
cmulab.plugins =
    diarization = cmulab_diarization:get_results
